Fix the bug of the top panel not align well Fix the bug of the Goal length too much Fix the bug of the submit button same length with other input values

--- a/trunk/Oxygen_test2/CSS/styleForIE.css
+++ b/trunk/Oxygen_test2/CSS/styleForIE.css
@@ -44,11 +44,18 @@ h1, h2{
 
 #toppanel{
     width:100%;
-    margin-left: -1000px;
+    margin-left: -1020px;
+}
+
+#adjusttoppanel{
+    margin-right:20px;
 }
 
 .tab A.open{
     width:120px;
+}
+.ui-widget input{
+    width:auto;
 }
 
 #sitemap ul li{
